--- a/MERN/React/register_form/package.json
+++ b/MERN/React/register_form/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "first_react_with_jsx",
+  "name": "register_form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "styled-components": "^5.0.1",
-    "styletron-react": "^5.2.7"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
