--- a/MERN/React/luke_apiwalker/package.json
+++ b/MERN/React/luke_apiwalker/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "pokemon_api",
+  "name": "luke_apiwalker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
